# truelayer-signing

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  jitpack.yml  public  request-signing-v2.md
.github/: CODEOWNERS  codeql-config.yml  dependabot.yaml
.github/workflows/: codeql.yml  csharp.yml  go.yml  java.yml  java7.yml  javascript.yml  kotlin.yml  node.yml  php.yml  python.yml  ruby.yml  rust.yml
csharp/: .editorconfig  .gitignore  CHANGELOG.md  README.md  csharp.sln  publish-to-nuget
csharp/benchmarks/: InternalPerformanceBenchmarks.cs  Program.cs  README.md  SignerBenchmarks.cs  TestData.cs  TrueLayer.Signing.Benchmarks.csproj  VerifierBenchmarks.cs
csharp/examples/sign-request/: ExampleSignRequest.csproj  Program.cs  README.md
csharp/examples/webhook-server/: ExampleWebhookServer.csproj  Program.cs  README.md  Startup.cs  WebhookController.cs
csharp/src/: Base64Url.cs  BouncyCastleUtil.cs  JwsHeaders.cs  Properties.cs  Signer.cs  Util.cs  Verifier.cs  VerifierSpan.cs  truelayer-signing.csproj
csharp/test/: Base64UrlTest.cs  ErrorTest.cs  JwsVerificationTest.cs  SigningFunction.cs  TestData.cs  UsageTest.cs  VerifierSpanTest.cs  truelayer-signing.test.csproj
csharp/test/Benchmarks/: Benchmarks.csproj  Program.cs  SignerBenchmarks.cs
csharp/test/TrueLayer.Signing.Test/: ErrorTest.cs  TestData.cs  UsageTest.cs  truelayer-signing.test.csproj
go/: CHANGELOG.md  README.md  go.mod  go.sum  tlsigning.go  tlsigning_test.go
go/crypto/: crypto.go
go/errors/: errors.go
go/examples/sign-request/: README.md  go.mod  go.sum  main.go
go/examples/webhook-server/: README.md  go.mod  go.sum  main.go
go/http/: header.go
go/jws/: jws_header.go
go/sign/: signer.go
go/verify/: verifier.go
java/: .gitignore  CHANGELOG.md  README.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
java/.github/workflows/: java.yml
java/examples/kotlin/: build.gradle
java/examples/scala/: build.gradle
java/examples/sign-request/: README.md  build.gradle
java/examples/webhook-server/: README.md  build.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/lib/: build.gradle  publish.gradle  test.gradle
java7/: CHANGELOG.md  README.md  build.gradle  gradle.properties  settings.gradle
java7/examples/sign-request/: README.md
java7/examples/webhook-server/: build.gradle
java7/lib/: build.gradle  publish.gradle  test.gradle
javascript/: CHANGELOG.md  README.md  jestconfig.json  package-lock.json  package.json  tsconfig.json
javascript/lib/: error.d.ts  error.js  headers.d.ts  headers.js  lib.d.ts  lib.js
javascript/src/: error.js  headers.js  lib.js  lib.ts
javascript/src/__tests__/: usage.test.ts
javascript/test/: usage.js
kotlin/: .gitignore  README.md  settings.gradle
kotlin/lib/: build.gradle
nodejs/: CHANGELOG.md  README.md  jestconfig.json  package.json  tsconfig.json  tsconfig.prod.json
nodejs/examples/aws-kms-sign/: README.md  package.json  tsconfig.json
nodejs/examples/sign-request/: README.md  index.js  package.json
nodejs/examples/webhook-server/: README.md  index.js  package.json
nodejs/src/: error.ts  headers.ts  lib.ts
nodejs/src/__tests__/: usage.test.js  usage.test.ts
php/: .gitattributes  .gitignore  .php-cs-fixer.php  CHANGELOG.md  README.md  composer.json  phpstan.neon
php/lib/jwt-library/: README.md
php/lib/pki-framework/: README.md
php/src/: AbstractJws.php  Signer.php  Util.php  Verifier.php
php/tests/: MockData.php  SignerTest.php  UtilTest.php  VerifierTest.php  ec512-private.pem
python/: .pre-commit-config.yaml  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
python/examples/sign-request/: README.md  main.py
python/examples/sign-request/client/: __init__.py  contants.py
python/examples/webhook-server/: README.md  main.py
python/tests/: test_tl_sign.py
python/truelayer_signing/: __init__.py  crypto.py  errors.py  sign.py  utils.py  verify.py
ruby/: .gitignore  .rubocop.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  truelayer-signing.gemspec
ruby/lib/: truelayer-signing.rb
ruby/test/: test-truelayer-signing.rb
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/examples/sign-request/: Cargo.toml  README.md
rust/examples/sign-request/src/: main.rs
rust/examples/webhook-server/: Cargo.toml  README.md
rust/examples/webhook-server/src/: main.rs
rust/src/: base64.rs  common.rs  http.rs  jws.rs  lib.rs  openssl.rs  sign.rs  verify.rs
rust/src/sign/: custom_signer.rs  mod.rs  signer_v1.rs
rust/src/verify/: custom_verifer.rs  mod.rs  verifier_v1.rs
rust/tests/: usage.rs
test-resources/: README.md  ec512-private.pem  ec512-public.pem  jwks.json  tl-signature.txt  webhook-signature.txt
(+570 files in other folders)
