[tool.poetry]
name = "truelayer-signing"
version = "0.3.0a"
description = "Produce & verify TrueLayer API requests signatures"
authors = ["tl-flavio-barinas <flavio.barinas@truelayer.com>"]
license = "Apache-2.0 or MIT"
readme = "README.md"
homepage = "https://github.com/TrueLayer/truelayer-signing/tree/main/python"
repository = "https://github.com/TrueLayer/truelayer-signing"
keywords = ["truelayer"]
include = ["LICENSE-APACHE", "LICENSE-MIT"]

[tool.poetry.dependencies]
cryptography = "^39.0.0"
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
coverage = "^7.0.2"
flake8 = "^6.0.0"
mypy = "^0.991"
pre-commit = "^2.21.0"
pylint = "^2.15.9"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
requests = "^2.28.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
