[tool.poetry]
name = "truelayer-signing"
version = "0.4.0"
description = "Produce & verify TrueLayer API requests signatures"
authors = ["tl-flavio-barinas <flavio.barinas@truelayer.com>"]
license = "Apache-2.0 or MIT"
readme = "README.md"
homepage = "https://github.com/TrueLayer/truelayer-signing/tree/main/python"
repository = "https://github.com/TrueLayer/truelayer-signing"
keywords = ["truelayer"]
include = ["LICENSE-APACHE", "LICENSE-MIT"]

[tool.poetry.dependencies]
cryptography = ">=39,<50"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
coverage = "^7.14.1"
flake8 = "^7.3.0"
mypy = "^2.1.0"
pre-commit = "^4.6.0"
pylint = "^4.0.6"
pytest = "^9.1.0"
pytest-cov = "^7.1.0"
requests = "^2.34.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
