[package]
name = "truelayer-signing"
version = "0.2.1"
authors = ["Alex Butler <alex.butler@truelayer.com>"]
edition = "2021"
description = "Produce & verify TrueLayer API requests signatures"
repository = "https://github.com/TrueLayer/truelayer-signing"
keywords = ["truelayer"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
openssl = "0.10"
base64 = "0.22"
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.2"
