[package]
name = "truelayer-signing"
version = "0.3.0"
authors = ["Alex Butler <alex.butler@truelayer.com>"]
edition = "2021"
description = "Produce & verify TrueLayer API requests signatures"
repository = "https://github.com/TrueLayer/truelayer-signing"
keywords = ["truelayer"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
indexmap = "2.2"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
