[package]
name = "webhook-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.17", features = ["full"] }
axum = "0.7"
anyhow = "1.0.56"
truelayer-signing = "0.2.0"
reqwest = "0.11"
tracing-subscriber = "0.3.9"
tracing = "0.1.32"
reqwest-middleware = "0.2.0"
http-cache-reqwest = { version = "0.13", default-features = false, features = [
    "manager-moka",
] }
